--- a/skills.html
+++ b/skills.html
@@ -70,7 +70,7 @@
 
       <!-- Radar -->
       <div id="skillRadar" class = "w-full h-[calc(100vh-10rem)] border rounded-lg flex flex-col text-center items-center">
-        <div class = "text-center flex justify-center items-center font-sans w-full h-12 text-lg text-black bg-gray-300 border">Compatability</div>
+        <div class = "text-center flex justify-center items-center font-sans w-full h-12 text-lg text-black bg-gray-300">Compatability</div>
         <div class="w-full h-[calc(100vh-14rem)] flex items-center justify-center p-4">
           <canvas id="radarChart" class="w-full h-full"></canvas>
         </div>
