--- a/index.html
+++ b/index.html
@@ -635,9 +635,13 @@
                             </div>
 
                             <!-- Radar Chart -->
-                            <div id="skillRadar" class="m-2 flex flex-col rounded-md text-center justify-center shadow border overflow-hidden" style="display: flex; align-items: center; justify-content: center;">
+                            <div id="skillRadar" class="m-2 flex flex-col rounded-md text-center justify-center shadow border overflow-hidden relative" style="display: flex; align-items: center; justify-content: center;">
                                 <canvas id="radarChart" class="w-full h-full"></canvas>
+                                <div id="skillRadarTooltip" class = "bg-white text-black" style="position: absolute; display: none; pointer-events: none; padding: 5px 8px; border-radius: 4px; font-size: 12px; z-index: 1000;">
+                                    Maximize the Compatability window to enter expected Proficiency
+                                </div>
                             </div>
+
                         </div>
 
                     </div>
@@ -962,16 +966,24 @@
                 type: 'radar',
                 data: {
                     labels: droppedIconIdsArr, 
-                    datasets: [{
-                        label: "Raghul's Skills", 
-                        data: Array.from(droppedIconScores), 
-                        backgroundColor: 'rgba(255, 99, 132, 0.2)', 
-                        borderColor: 'rgb(255, 255, 255)', 
-                        borderWidth: 2 
-                        
-                    }]
-                    
+                    datasets: [
+                        {
+                            label: "Raghul's Skills", 
+                            data: Array.from(droppedIconScores), 
+                            backgroundColor: 'rgba(0, 123, 255, 0.4)',   // Soft Blue
+                            borderColor: 'rgba(0, 123, 255, 1)',          // Solid Blue border
+                            borderWidth: 2 
+                        },
+                        {
+                            label: "Expected Skill", 
+                            data: Array(droppedIconIdsArr.length).fill(5), 
+                            backgroundColor: 'rgba(255, 193, 7, 0.4)',    // Warm Yellow
+                            borderColor: 'rgba(255, 193, 7, 1)',          // Solid Yellow border
+                            borderWidth: 2 
+                        }
+                    ]
                 },
+
                 options: {
                     scales: {
                         r: {
@@ -1237,7 +1249,7 @@
         playButton.addEventListener('click', () => {
             playButton.classList.add('hidden');
             thumbnail.classList.add('hidden');
-            about_video.currentTime = 0;
+            about_video.currentTime = 0.1;
             about_video.classList.remove('hidden');
             skipButton.classList.remove('hidden');
             about_video.play();
@@ -1268,6 +1280,27 @@
             window.location.href = `skills.html?${params.toString()}`;
 
         });
+
+        const skillRadar = document.getElementById('skillRadar');
+        const skillRadarTooltip = document.getElementById('skillRadarTooltip');
+
+        skillRadar.addEventListener('mousemove', (e) => {
+            console.log('mouse in radarGraph');
+            const rect = skillRadar.getBoundingClientRect();
+            const x = e.clientX - rect.left;
+            const y = e.clientY - rect.top;
+
+            maximizeStatsButton.style.background = 'green';
+            skillRadarTooltip.style.left = `${x + 10}px`;
+            skillRadarTooltip.style.top = `${y + 10}px`;
+            skillRadarTooltip.style.display = 'block';
+        });
+
+        skillRadar.addEventListener('mouseleave', () => {
+            maximizeStatsButton.style.background = 'white'
+            skillRadarTooltip.style.display = 'none';
+        });
+
 
 
     </script>
