--- a/index.html
+++ b/index.html
@@ -658,7 +658,7 @@
               <h2 class="text-3xl font-semibold mb-8">Contact</h2>
           
               <div class="text-center mb-12">
-                <form action="/submit-form" method="POST" class="space-y-6">
+                <form action="https://formsubmit.co/ligerragul@gmail.com" method="POST" class="space-y-6">
                   
                   <div class="form-group flex flex-col md:flex-row items-start md:items-center gap-4">
                     <label for="name" class="text-lg w-40 text-left">Full Name</label>
