--- a/index.html
+++ b/index.html
@@ -659,6 +659,7 @@
           
               <div class="text-center mb-12">
                 <form action="https://formsubmit.co/ligerragul@gmail.com" method="POST" class="space-y-6">
+                <input type="hidden" name="_captcha" value="false">
                   
                   <div class="form-group flex flex-col md:flex-row items-start md:items-center gap-4">
                     <label for="name" class="text-lg w-40 text-left">Full Name</label>
