--- a/index.html
+++ b/index.html
@@ -351,31 +351,31 @@
         <!-- ##################  Projects Section ################################## -->
         <section id="projectsSection" class="py-16 px-6">
             <div class="max-w-4xl mx-auto">
-                <h2 class="text-3xl font-semibold mb-8">Projects</h2>
+                <h2 class="text-3xl font-semibold mb-8 mx-auto text-center">Projects</h2>
                 <div class="grid grid-cols-1 md:grid-cols-2 gap-6">
-                    <div class="p-6 rounded-xl shadow hover:shadow-lg transition">
-                        <h3 class="text-xl font-bold mb-2">Project Title One</h3>
-                        <p class="text-gray-600">Brief description of the project, methods used, and impact. Focus on how it relates to energy or climate.</p>
+                    <div class="p-6 rounded-xl bg-gray-300 bg-opacity-50 shadow hover:shadow-lg transition">
+                        <h3 class="text-xl font-bold mb-2">Telekom</h3>
+                        <p class="text-black">Masterarbeit: collaboration with TUD and Telekom</p>
                     </div>
-                    <div class="p-6 rounded-xl shadow hover:shadow-lg transition">
-                        <h3 class="text-xl font-bold mb-2">Project Title Two</h3>
-                        <p class="text-gray-600">Brief description of the project, methods used, and outcomes. Tie it to sustainability goals or data insights.</p>
+                    <div class="p-6 rounded-xl shadow bg-gray-300 bg-opacity-50 hover:shadow-lg transition">
+                        <h3 class="text-xl font-bold mb-2">SAP Automation</h3>
+                        <p class="text-black">Meldung Contract, Material </p>
                     </div>
-                    <div class="p-6 rounded-xl shadow hover:shadow-lg transition">
-                        <h3 class="text-xl font-bold mb-2">Project Title Three</h3>
-                        <p class="text-gray-600">Developed a web-based dashboard to visualize real-time emissions data, enabling informed policy decisions and public engagement.</p>
+                    <div class="p-6 rounded-xl shadow bg-gray-300 bg-opacity-50 hover:shadow-lg transition">
+                        <h3 class="text-xl font-bold mb-2">SAP Atuomation</h3>
+                        <p class="text-black">KALA stuff</p>
                     </div>
-                    <div class="p-6 rounded-xl shadow hover:shadow-lg transition">
-                        <h3 class="text-xl font-bold mb-2">Project Title Four</h3>
-                        <p class="text-gray-600">Engineered a machine learning model to forecast solar energy production using weather data, improving grid stability and efficiency.</p>
+                    <div class="p-6 rounded-xl shadow bg-gray-300 bg-opacity-50 hover:shadow-lg transition">
+                        <h3 class="text-xl font-bold mb-2">Leap</h3>
+                        <p class="text-black">model electricity in germany</p>
                     </div>
-                    <div class="p-6 rounded-xl shadow hover:shadow-lg transition">
-                        <h3 class="text-xl font-bold mb-2">Project Title Five</h3>
-                        <p class="text-gray-600">Created a mobile app to track personal carbon footprints, offering actionable tips and community challenges for behavior change.</p>
+                    <div class="p-6 rounded-xl shadow bg-gray-300 bg-opacity-50 hover:shadow-lg transition">
+                        <h3 class="text-xl font-bold mb-2">Energy Storage</h3>
+                        <p class="text-black">developed optimal heat storage technology for a commercial building</p>
                     </div>
-                    <div class="p-6 rounded-xl shadow hover:shadow-lg transition">
-                        <h3 class="text-xl font-bold mb-2">Project Title Six</h3>
-                        <p class="text-gray-600">Analyzed city-wide energy consumption patterns to identify efficiency gaps and prioritize retrofitting investments in public buildings.</p>
+                    <div class="p-6 rounded-xl shadow bg-gray-300 bg-opacity-50 hover:shadow-lg transition">
+                        <h3 class="text-xl font-bold mb-2">Hackathon</h3>
+                        <p class="text-black">Transport Hub of the Future</p>
                     </div>
                 </div>
             </div>
@@ -631,7 +631,7 @@
 
                             <!-- Drag Over Area -->
                             <div id="skillDragOver" class="m-2 flex flex-row flex-wrap justify-center gap-4 items-center shadow border rounded-md"> 
-                                <p class="absolute text-center items-center">Drag and Drop Skills to generate Graph</p>
+                                <p class="absolute text-center items-center">Drag and Drop atleast 3 Skills to generate Graph</p>
                             </div>
 
                             <!-- Radar Chart -->
@@ -655,7 +655,7 @@
         
         <section id="contactSection" class="bg-trasparent flex justify-center items-center px-6 py-16 text-white">
             <div class="w-full max-w-4xl">
-              <h2 class="text-3xl font-semibold mb-8">Contact</h2>
+              <h2 class="text-3xl font-semibold mb-8 text-center">Contact</h2>
           
               <div class="text-center mb-12">
                 <form action="https://formsubmit.co/ligerragul@gmail.com" method="POST" class="space-y-6">
