skills with table

--- a/index.html
+++ b/index.html
@@ -126,8 +126,8 @@
             <h1 class="text-2xl font-bold">Raghul Babu</h1>
             <nav class="space-x-6">
                 <a href="#aboutSection" class="hover:text-green-300 transition">About</a>
-                <a href="#projectsSection" class="hover:text-green-300 transition">Projects</a>
-                <a href="#skillsSection" class="hover:text-green-300 transition">Skills</a>
+                <a href="/projects.html" class="hover:text-green-300 transition">Projects</a>
+                <a href="/skills.html" class="hover:text-green-300 transition">Skills</a>
                 <a href="#contactSection" class="hover:text-green-300 transition">Contact</a>
             </nav>
         </div>
