--- a/projects.html
+++ b/projects.html
@@ -22,8 +22,8 @@
       <nav class="space-x-6">
         <a href="./index.html" class="hover:text-green-300 transition">Home</a>
         <a href="./index.html#aboutSection" class="hover:text-green-300 transition">About</a>
-        <a href="./index.html#projectsSection" class="hover:text-green-300 transition">Projects</a>
-        <a href="./index.html#skillsSection" class="hover:text-green-300 transition">Skills</a>
+        <a href="./projects.html" class="hover:text-green-300 text-green-300 transition">Projects</a>
+        <a href="./skills.html" class="hover:text-green-300 transition">Skills</a>
         <a href="./index.html#contactSection" class="hover:text-green-300 transition">Contact</a>
       </nav>
     </div>
