--- a/skills.html
+++ b/skills.html
@@ -23,7 +23,7 @@
             <a href="./index.html" class="hover:text-green-300 transition">Home</a>
             <a href="./index.html#aboutSection" class="hover:text-green-300 transition">About</a>
             <a href="./projects.html" class="hover:text-green-300 transition">Projects</a>
-            <a href="./skills.html" class="hover:text-green-300 transition">Skills</a>
+            <a href="./skills.html" class="hover:text-green-300 text-green-300 transition">Skills</a>
             <a href="./index.html#contactSection" class="hover:text-green-300 transition">Contact</a>
           </nav>
         </div>
