--- a/index.html
+++ b/index.html
@@ -150,7 +150,7 @@
                     <button id="play-button" class="absolute inset-0 flex items-center text-center justify-center w-full h-full z-10">
                         <svg class="w-20 h-20 text-white opacity-80 hover:opacity-100" fill="currentColor" viewBox="0 0 84 84">
                             <circle cx="42" cy="42" r="42" fill="rgba(0,10,0,0.)"/>
-                            <polygon points="33,24 63,42 33,60" fill="white"/>
+                            <polygon points="33,24 63,42 33,60" fill="black"/>
                         </svg>
                     </button>
                 
