--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
             height: 100%;
             overflow: hidden;
             z-index: -1;
+            transition:opacity 3s ease;
         }
 
         .video-background video {
@@ -106,7 +107,7 @@
     </style>
 </head>
 
-<body class="text-white font-sans">
+<body class="text-white font-sans bg-black">
     <div class="video-background">
         <video id="video1" autoplay muted playsinline>
             <source src="static/3045163-hd_1920_1080_25fps(1).mp4" type="video/mp4" />
@@ -636,7 +637,10 @@
 
                             <!-- Radar Chart -->
                             <div id="skillRadar" class="m-2 flex flex-col rounded-md text-center justify-center shadow border overflow-hidden relative" style="display: flex; align-items: center; justify-content: center;">
-                                <canvas id="radarChart" class="w-full h-full"></canvas>
+                                <canvas i        setTimeout(() => {
+                                    video.style.opacity = '0';
+                                    }, 10000); // 10 seconds
+                                });d="radarChart" class="w-full h-full"></canvas>
                                 <div id="skillRadarTooltip" class = "bg-white text-black" style="position: absolute; display: none; pointer-events: none; padding: 5px 8px; border-radius: 4px; font-size: 12px; z-index: 1000;">
                                     Maximize the Compatability window to enter expected Proficiency
                                 </div>
@@ -721,6 +725,11 @@
                 content.style.opacity = 1;
                 header.style.opacity = 1;
             }, 1650);
+        });
+        video.addEventListener('play', () => {
+            setTimeout(() => {
+            video.style.opacity = '0';
+            }, 10000); // 10 seconds
         });
         
         const academicBackgroundButton = document.getElementById('academicBackgroundButton');
