--- a/index.html
+++ b/index.html
@@ -355,27 +355,27 @@
             <div class="max-w-4xl mx-auto">
                 <h2 class="text-3xl font-semibold mb-8 mx-auto text-center">Projects</h2>
                 <div class="grid grid-cols-1 md:grid-cols-2 gap-6">
-                    <div class="p-6 rounded-xl bg-gray-300 bg-opacity-50 shadow hover:shadow-lg transition">
+                    <div class="p-6 rounded-xl bg-gray-300 hover hover:scale-105 bg-opacity-50 shadow hover:shadow-lg transition">
                         <h3 class="text-xl font-bold mb-2">Telekom</h3>
                         <p class="text-black">Masterarbeit: collaboration with TUD and Telekom</p>
                     </div>
-                    <div class="p-6 rounded-xl shadow bg-gray-300 bg-opacity-50 hover:shadow-lg transition">
+                    <div class="p-6 rounded-xl shadow bg-gray-300 hover hover:scale-105 bg-opacity-50 hover:shadow-lg transition">
                         <h3 class="text-xl font-bold mb-2">SAP Automation</h3>
                         <p class="text-black">Meldung Contract, Material </p>
                     </div>
-                    <div class="p-6 rounded-xl shadow bg-gray-300 bg-opacity-50 hover:shadow-lg transition">
+                    <div class="p-6 rounded-xl shadow bg-gray-300 hover hover:scale-105 bg-opacity-50 hover:shadow-lg transition">
                         <h3 class="text-xl font-bold mb-2">SAP Atuomation</h3>
                         <p class="text-black">KALA stuff</p>
                     </div>
-                    <div class="p-6 rounded-xl shadow bg-gray-300 bg-opacity-50 hover:shadow-lg transition">
+                    <div class="p-6 rounded-xl shadow bg-gray-300 hover hover:scale-105 bg-opacity-50 hover:shadow-lg transition">
                         <h3 class="text-xl font-bold mb-2">Leap</h3>
                         <p class="text-black">model electricity in germany</p>
                     </div>
-                    <div class="p-6 rounded-xl shadow bg-gray-300 bg-opacity-50 hover:shadow-lg transition">
+                    <div class="p-6 rounded-xl shadow bg-gray-300 hover hover:scale-105 bg-opacity-50 hover:shadow-lg transition">
                         <h3 class="text-xl font-bold mb-2">Energy Storage</h3>
                         <p class="text-black">developed optimal heat storage technology for a commercial building</p>
                     </div>
-                    <div class="p-6 rounded-xl shadow bg-gray-300 bg-opacity-50 hover:shadow-lg transition">
+                    <div class="p-6 rounded-xl shadow bg-gray-300 hover hover:scale-105 bg-opacity-50 hover:shadow-lg transition">
                         <h3 class="text-xl font-bold mb-2">Hackathon</h3>
                         <p class="text-black">Transport Hub of the Future</p>
                     </div>
@@ -639,10 +639,7 @@
 
                             <!-- Radar Chart -->
                             <div id="skillRadar" class="m-2 flex flex-col rounded-md text-center justify-center shadow border overflow-hidden relative" style="display: flex; align-items: center; justify-content: center;">
-                                <canvas i        setTimeout(() => {
-                                    video.style.opacity = '0';
-                                    }, 10000); // 10 seconds
-                                });d="radarChart" class="w-full h-full"></canvas>
+                                <canvas id="radarChart" class="w-full h-full"></canvas>
                                 <div id="skillRadarTooltip" class = "bg-white text-black" style="position: absolute; display: none; pointer-events: none; padding: 5px 8px; border-radius: 4px; font-size: 12px; z-index: 1000;">
                                     Maximize the Compatability window to enter expected Proficiency
                                 </div>
