--- a/projects.html
+++ b/projects.html
@@ -8,7 +8,7 @@
           </div>
           <div></div>
           
-            <div class="grid grid-cols-[80px_1fr] gap-4 p-4">
+            <div id ="dt-textContainer"class="grid grid-cols-[80px_1fr] gap-4 p-4">
 
               <div class="font-semibold text-blue-300 text-left">Aim</div>
               <div class="text-left">Saving Energy Cost</div>
