--- a/index.html
+++ b/index.html
@@ -199,9 +199,9 @@
                 </div>
                 
                 <div class="flex flex-col md:flex-row items-center max-w-6xl mx-auto  items-start gap-6">
-                    <div>
+                    <!-- <div>
                         <img src = "/static/raghul.jpg"  class = "w-96 h-48 rounded-lg object-cover">
-                    </div>
+                    </div> -->
                     <div>
                         <p class="text-lg leading-relaxed">
                             I am a data scientist passionate about using data to drive insights and solutions in the areas of energy, climate change,
