--- a/index.html
+++ b/index.html
@@ -240,7 +240,7 @@
                     </div>
                 </div>
                 
-                <div class="grid mx-auto xl:max-w-5xl xl:grid-cols-[120px_1fr] 2xl:grid-cols-[180px_1fr] items-center text-center max-w-6xl  gap-6">
+                <div class="grid mx-auto 2xl:max-w-5xl xl:max-w-2xl xl:grid-cols-[120px_1fr] 2xl:grid-cols-[180px_1fr] items-center text-center  gap-6">
                     <div class = "w-full">
                         <img src = "/static/raghul.jpg"  class = "rounded-lg object-cover">
                     </div>
