--- a/index.html
+++ b/index.html
@@ -266,7 +266,7 @@
                         <h2 class="text-2xl font-semibold mb-10 text-center">Experience</h2>
                         <div id="experience-timeline" class="relative space-y-6 ">
                           <!-- Timeline line -->
-                          <div class="absolute left-1/2 transform -translate-x-1/2 h-full border-l-2 border-yellow-500"></div>
+                          <div class="absolute left-1/2 transform -translate-x-1/2 h-full border-l-2 border-blue-500"></div>
                         </div>
                       </section>
 
