--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>Data Scientist | Energy, Climate & Sustainability</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <style>
         .video-background {
             position: fixed;
@@ -359,7 +360,9 @@
                       type="submit"
                       class="mt-4 bg-white text-gray-900 font-semibold px-6 py-2 rounded hover:bg-gray-300 transition-all"
                     >
-                      Send Message
+                    SEND
+                    <i class="fa fa-paper-plane-o"></i>
+                    
                     </button>
                   </div>
                 </form>
