--- a/index.html
+++ b/index.html
@@ -182,10 +182,10 @@
         <div class="container mx-auto px-6 py-4 flex justify-between items-center"  id = "header">
             <h1 class="text-2xl font-bold">Raghul Babu</h1>
             <nav class="space-x-6">
-                <a href="#aboutSection" class="hover:text-green-300 transition">About</a>
-                <a href="#projectsSection" class="hover:text-green-300 transition">Projects</a>
-                <a href="#skillsSection" class="hover:text-green-300 transition">Skills</a>
-                <a href="#contactSection" class="hover:text-green-300 transition">Contact</a>
+                <a href="#aboutSection" class="nav-link hover:text-green-300 transition">About</a>
+                <a href="#projectsSection" class="nav-link hover:text-green-300 transition">Projects</a>
+                <a href="#skillsSection" class="nav-link hover:text-green-300 transition">Skills</a>
+                <a href="#contactSection" class="nav-link hover:text-green-300 transition">Contact</a>
             </nav>
         </div>
     </header>
