changed button color

--- a/index.html
+++ b/index.html
@@ -353,9 +353,9 @@
                   <div class="text-center">
                     <button
                       type="submit"
-                      class="mt-4 bg-white text-gray-900 font-semibold px-6 py-2 rounded hover:bg-gray-300 transition-all"
+                      class="mt-4 bg-green-500 text-white font-semibold px-6 py-2 rounded hover:text-black transition-all"
                     >
-                    SEND
+                    SEND 
                     <i class="fa fa-paper-plane-o"></i>
                     
                     </button>
