skill transition except for time

--- a/skills.html
+++ b/skills.html
@@ -8,7 +8,8 @@
                   xl:grid-cols-[30%_25%_40%]  
                   2xl:grid-cols-[40%_17%_38%] 
                   lg:h-[calc(100vh-4rem)]  
-                  gap-1 2xl:gap-8">
+                  gap-1 2xl:gap-8
+                  Z-30">
       
       <!-- Skill Grid -->
       <div  class="text-center justify-center border border-blue-300 rounded-lg h-[calc(100vh-9rem)]  shadow ">
